[OpenApi] Add validation + unexpected failure response types
Currently, these response types will _always_ be added to every operation, regardless of setup and configuration
